--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
+    "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
